New entry point Post Patch Tags